Version 0.7.2, 04/09/2002
	1. add hydrogenic TRRate routine.
	2. update papers for submission to PRA.
	3. the r_core for H-like ions changed to 0.75*MAX_POINTS.
	4. update Makefile and setup.py for Mac OS X.
	
Version 0.7.1, 03/11/2002
	1. add pfac.spm module for processing spectral data
	2. LevelName function added
	3. reimplement the output of spectra data to better distinguish
	   different type of transitions.
	4. make the coulomb-born contribution to collisional excitation
	   more robust.
	5. added Gaussian electron energy distribution to simulate EBIT
	   beam.
	6. improve the integration routine for rate coefficients.
	7. make the RateTable output more useful.
	8. improve the convergence of radial optimizer for near neutral
	   ions. It should now work even for neutral atoms.
	9. added TABLE class to spm module.
	10.AI channels with 2s hole need to be included.
	11.Update demo files for ConfigEnergy. and FeL dir.
	12.add RRRateH function.
	13.add RRC data in SpecTable
	14.fix a bug for H-like ions which gave wrong results for n>=11.
	15.put make macros in setup.py
	16.fix a bug on RR at Ne != 1E10.
	
Version 0.7.0, 02/06/2002
	1. add endian swapping in dbase.c and crm.c
	2. implement extrapolation on recombined states.
	3. using Seaton's method (MNRAS 119, 81) to extrapolate RR rates
	4. adding the ionization balance calculation of Arnaud&Raymond.
	5. fix a bug in the reinitialization of radial.c
	6. implement ConfigEnergy() to adjust the level energies.

Version 0.6.9, 01/20/2002
	1. improve the atom module.
	2. updated demo scripts for the new version. added the FeL 
	   demo scripts to calculate the FeL spectrum.
	3. changed the default QkMode for excitation to EXACT.
	4. added SetAbund routine to CRM.

Version 0.6.8, 01/14/2002
	1. use setup.py script to install the python interface. 
	   successfully built under Windows with Cygwin installed.
	2. implement binary output, and its conversion to ASCII format.